fix minor layout bugs

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -254,17 +254,16 @@
   }
 
   .article, article {
-    p, ul {
-      :not(pre) code, em.highlight {
-        font-style: normal;
-        background-color: #152028;
-        padding: .25em .25em 0 .25em;
-        border-radius: .4rem;
-        border-color: #666;
-        box-shadow: 0 0 .8px #fff;
-      }
+    :not(pre) code, em.highlight {
+      font-style: normal;
+      background-color: #152028;
+      padding: .25em .25em;
+      border-radius: .4rem;
+      border-color: #666;
+      box-shadow: 0 0 .8px #fff;
+      border-width: .5px;
     }
-  } 
+  }
 
   img {
     @apply rounded;
@@ -315,7 +314,7 @@ h6 {
 
 /* first h1 in the page*/
 h1:first-of-type {
-  font-size: 1.75rem;
+  font-size: 1.95rem;
   line-height: 1.75;
   margin-block: 2rem;
   color: #fff;
