--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -28,6 +28,10 @@
   
   transition: grid-template-columns 0.3s ease-out, max-width 0.3s ease-out, padding 0.3s ease-out, margin 0.3s ease-out, width 0.3s ease-out;
 
+  > img {
+    padding: 0rem;
+  }
+
   > h1,
   > h2, 
   > h3, 
